==> liu-delong/lu_xing_xiang_one_os/drivers/hal/gd/drivers_4xx/drv_gpio.c <==
#include <os_irq.h>
#include "drv_gpio.h"
#include "gd32f4xx.h"
#include "gd32f4xx_exti.h"
#include "gd32f4xx_gpio.h"
#include "gd32f4xx_syscfg.h"
#include <os_irq.h>
#define __GD32_PIN(index, port, pin) {index, RCU_GPIO##port, GPIO##port, \
        GPIO_PIN_##pin, EXTI_SOURCE_GPIO##port, EXTI_SOURCE_PIN##pin}
#define __GD32_PIN_DEFAULT {-1, (rcu_periph_enum)0, 0, 0, 0, 0}
#define ITEM_NUM(items) sizeof(items) / sizeof(items[0])

static void gd32_pin_mode(os_device_t *dev, os_base_t pin, os_base_t mode)
{
    const struct pin_index *index;
    os_uint32_t pin_mode;
    os_uint32_t pull_up_down;
    index = get_pin(pin);
    if (index == OS_NULL)
    {
        return;
    }

    /* GPIO Periph clock enable */
    rcu_periph_clock_enable(index->clk);
    pin_mode = GPIO_MODE_OUTPUT;
    
   switch(mode)
   {
   case PIN_MODE_OUTPUT:
        /* output setting */
        pin_mode = GPIO_MODE_OUTPUT;
        pull_up_down = GPIO_PUPD_NONE;
        break;
   case PIN_MODE_OUTPUT_OD:
        /* output setting: od. */
        pin_mode = GPIO_MODE_OUTPUT;
        pull_up_down = GPIO_PUPD_PULLDOWN;
        break;
   case PIN_MODE_INPUT:
        /* input setting: not pull. */
        pin_mode = GPIO_MODE_INPUT;
        pull_up_down = GPIO_PUPD_PULLUP;
        break;
   case PIN_MODE_INPUT_PULLUP:
        /* input setting: pull up. */
        pin_mode = GPIO_MODE_INPUT;
        pull_up_down = GPIO_PUPD_PULLUP;
        break;
   case PIN_MODE_INPUT_PULLDOWN:
        /* input setting: pull down. */
        pin_mode = GPIO_MODE_INPUT;
        pull_up_down = GPIO_PUPD_PULLDOWN;
        break;
   default:
        break;
   }

    gpio_mode_set(index->gpio_periph, pin_mode, pull_up_down, index->pin);
    gpio_output_options_set(index->gpio_periph, GPIO_OTYPE_PP, GPIO_OSPEED_50MHZ, index->pin);
}

static void gd32_pin_write(os_device_t *dev, os_base_t pin, os_base_t value)
{
    const struct pin_index *index;

    index = get_pin(pin);
    if (index == OS_NULL)
    {
        return;
    }

    gpio_bit_write(index->gpio_periph, index->pin, (bit_status)value);
}

static int gd32_pin_read(os_device_t *dev, os_base_t pin)
{
    int value;
    const struct pin_index *index;

    value = PIN_LOW;

    index = get_pin(pin);
    if (index == OS_NULL)
    {
        os_kprintf("invalid pin\r\n");
        return value;
    }

    value = gpio_input_bit_get(index->gpio_periph, index->pin);

    return value;
}

static os_err_t gd32_pin_irq_enable(struct os_device *device, os_base_t pin, os_uint32_t enabled)
{
    const struct pin_index *index;
    const struct pin_irq_map *irqmap;
    os_base_t level;
    os_int32_t hdr_index = -1;
    exti_trig_type_enum trigger_mode;

    index = get_pin(pin);
    if (index == OS_NULL)
    {
        return OS_EINVAL;
    }
    if (enabled == PIN_IRQ_ENABLE)
    {
        hdr_index = bit2bitno(index->pin);
        if (hdr_index < 0 || hdr_index >= ITEM_NUM(pin_irq_map))
        {
            return OS_EINVAL;
        }
        level = os_hw_interrupt_disable();
        if (pin_irq_hdr_tab[hdr_index].pin == -1)
        {
            os_hw_interrupt_enable(level);
            return OS_EINVAL;
        }
        irqmap = &pin_irq_map[hdr_index];
   
        switch (pin_irq_hdr_tab[hdr_index].mode)
        {
            case PIN_IRQ_MODE_RISING:
                trigger_mode = EXTI_TRIG_RISING;
                break;
            case PIN_IRQ_MODE_FALLING:
                trigger_mode = EXTI_TRIG_FALLING;
                break;
            case PIN_IRQ_MODE_RISING_FALLING:
                trigger_mode = EXTI_TRIG_BOTH;
                break;
            default:
                os_hw_interrupt_enable(level);
                return OS_EINVAL;
        }

        rcu_periph_clock_enable(index->clk);
        rcu_periph_clock_enable(RCU_SYSCFG);

		/* configure button pin as input */
		gpio_mode_set(index->gpio_periph, GPIO_MODE_INPUT, GPIO_PUPD_NONE,index->pin);

        /* enable and set interrupt priority */
        nvic_irq_enable(irqmap->irqno, 2U, 0U);
        
        /* connect EXTI line to  GPIO pin */
        syscfg_exti_line_config(index->port_src, index->pin_src);

        /* configure EXTI line */
        exti_init((exti_line_enum)(index->pin), EXTI_INTERRUPT, trigger_mode);
        exti_interrupt_flag_clear((exti_line_enum)(index->pin));
        
        os_hw_interrupt_enable(level);
    }
    else if (enabled == PIN_IRQ_DISABLE)
    {
        irqmap = get_pin_irq_map(index->pin);
        if (irqmap == OS_NULL)
        {
            return OS_EINVAL;
        }
        nvic_irq_disable(irqmap->irqno);
    }
    else
    {
        return OS_EINVAL;
    }

    return OS_EOK;
}

int os_hw_pin_init(void)
{
#if defined(RCU_GPIOA)
   rcu_periph_clock_enable(RCU_GPIOA);
#endif

#if defined(RCU_GPIOB)
   rcu_periph_clock_enable(RCU_GPIOB);
#endif

#if defined(RCU_GPIOC)
   rcu_periph_clock_enable(RCU_GPIOC);
#endif

#if defined(RCU_GPIOE)
    rcu_periph_clock_enable(RCU_GPIOE);
#endif

   return os_device_pin_register(0, &_gd32_pin_ops, OS_NULL);
}
